--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
     
-   // <link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-
-    //<link href="css/style.css" rel="stylesheet">
-   // <link href="css/print.css" rel="stylesheet">
-
+   <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> ...-->
+   <!-- <link href="css/style.css" rel="stylesheet">.-->   
+   <!--  <link href="css/print.css" rel="stylesheet">-->
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
       w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
