--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
    <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> ...-->
    <!-- <link href="css/style.css" rel="stylesheet">.-->   
    <!--  <link href="css/print.css" rel="stylesheet">-->
+    <script src="http://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
+<script type="text/javascript">
+  WebFont.load({
+    google: {
+      families: ['Open+Sans']
+    }
+  });
+</script>
+<style type="text/css">
+  .wf-loading h1 { visibility: hidden; }
+  .wf-active h1, .wf-inactive h1 { 
+    visibility: visible; font-family: 'Open+Sans'; 
+  }
+</style>   
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
       w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
