--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
    <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> ...-->
    <!-- <link href="css/style.css" rel="stylesheet">.-->   
-   <!--  <link href="css/print.css" rel="stylesheet">-->
+    <link href="css/print.css" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
 <script type="text/javascript">
   WebFont.load({
