--- a/index.html
+++ b/index.html
@@ -9,23 +9,67 @@
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
     
-   <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> ...-->
-   <!-- <link href="css/style.css" rel="stylesheet">.-->   
-   
+   <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> ...--> 
     <script src="http://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
-<script type="text/javascript">
-  WebFont.load({
-    google: {
-      families: ['Open+Sans']
-    }
-  });
-</script>
-<style type="text/css">
-  .wf-loading h1 { visibility: hidden; }
-  .wf-active h1, .wf-inactive h1 { 
-    visibility: visible; font-family: 'Open+Sans'; 
+    <script type="text/javascript">
+      WebFont.load({
+        google: {
+          families: ['Open+Sans']
+        }
+      });
+    </script>
+        <style type="text/css">
+          .wf-loading h1 { visibility: hidden; }
+          .wf-active h1, .wf-inactive h1 { 
+            visibility: visible; font-family: 'Open+Sans'; 
+          }
+        </style> 
+    <style>
+      html {
+  font-size: 100%;
+  overflow-y: scroll;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: none;
+}
+
+body {
+  margin: 0;
+  font-size: 14px;
+  line-height: 1.61;
+  font-weight: 400;
+}
+
+body,
+button,
+input {
+  font-family: 'Open Sans', sans-serif;
+  color: #333;
+}
+
+a {
+  color: #12C;
+}
+
+ul {
+  margin: 1em 0;
+  padding: 0 0 0 20px;
+}
+
+body {
+  background: #fff;
+}
+
+.container {
+  max-width: 45em;
+  margin: 0 auto;
+}
+
+@media only screen and (max-width: 480px) {
+  body {
+    font-size: 12px;
   }
-</style>  
+}
+    </style>
      <link href="css/print.css" rel="stylesheet">
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
@@ -82,5 +126,6 @@
         <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
       </footer>
     </div>
+    <link href="css/style.css" rel="stylesheet">
   </body>
 </html>
