--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
     
    <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> ...--> 
-    <script src="http://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
     <script type="text/javascript">
       WebFont.load({
         google: {
@@ -79,7 +79,7 @@
       ga('create', 'UA-XXXX-Y');
       ga('send', 'pageview');
     </script>
-    <script src="http://www.google-analytics.com/analytics.js"></script>
+    <script async src="http://www.google-analytics.com/analytics.js"></script>
     <script async src="js/perfmatters.js"></script>
   </head>
 
