--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
     
    <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> ...--> 
-    <script src="http://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
+    <script async src="http://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
     <script type="text/javascript">
       WebFont.load({
         google: {
@@ -70,7 +70,7 @@
             }
           }
               </style>
-     <link href="css/print.css" rel="stylesheet">
+     
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
       w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
@@ -126,5 +126,6 @@
       </footer>
     </div>
     <link href="css/style.css" rel="stylesheet">
+   
   </body>
 </html>
