--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           </li>
 
           <li>
-            <img style="height: 50px; width: 100px;" src="views/images/pizzeria copy.jpg">
+            <img style="width: 100px;" src="views/images/pizzeria.copy.jpg">
             <a href="views/pizza.html">Cam's Pizzeria</a>
             <p>Who wants a performant pizza?</p>
           </li>
